<resources>
    <string name="app_name">Your Birthday Countdown</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result">Result</string>
    <string name="title">Your Birthday\nCountdown</string>
    <string name="submit">Submit</string>
    <string name="your_date_of_birth">Your date of birth</string>
    <string name="your_name">Your name</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="desc_bg_img">Background Image</string>
    <string name="desc_btn_refresh">Refresh button</string>
</resources>