<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/img_birthday2"
    tools:context=".HomeFragment">

    <LinearLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/bg_rounded_blue_trans"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/whitesmoke"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/your_name"
                android:textColor="@color/whitesmoke"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_your_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_et_primary"
                android:fontFamily="@font/roboto_regular"
                android:inputType="text"
                android:lines="1"
                android:paddingHorizontal="12dp"
                android:textColor="@color/gray_primary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/your_date_of_birth"
                android:textColor="@color/whitesmoke"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_your_dob"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_et_primary"
                android:focusable="false"
                android:fontFamily="@font/roboto_regular"
                android:inputType="text"
                android:lines="1"
                android:paddingHorizontal="12dp"
                android:textColor="@color/gray_primary" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_btn_primary"
            android:fontFamily="@font/roboto_medium"
            android:paddingHorizontal="32dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/whitesmoke" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>